# gvc

./: .editorconfig  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  PACKAGE_MANAGERS.md  README.md  README_ZH.md  clippy.toml
.github/workflows/: ci.yml  release.yml  update-package-managers.yml
src/: cli.rs  error.rs  main.rs  workflow.rs
src/agents/: catalog_editor.rs  dependency_updater.rs  gradle_execution.rs  mod.rs  project_scanner.rs  toml_parser.rs  version_control.rs
src/agents/update/: context.rs  interaction.rs  mod.rs
src/agents/update/handlers/: library_handler.rs  mod.rs  plugin_handler.rs  targeted_handler.rs  version_handler.rs
src/gradle/: config_parser.rs  mod.rs
src/maven/: mod.rs  plugin_portal.rs  repository.rs  version.rs
src/repository/: factory.rs  mod.rs
src/utils/: mod.rs  path_validator.rs  toml.rs
