[package]
name = "gvc"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kingsword kingsword09 <kingsword09@gmail.com>"]
description = "A fast, standalone CLI tool for managing Gradle version catalog dependencies"
license = "Apache-2.0"
repository = "https://github.com/kingsword09/gvc"
homepage = "https://github.com/kingsword09/gvc"
documentation = "https://github.com/kingsword09/gvc/blob/main/README.md"
readme = "README.md"
keywords = ["gradle", "dependency", "version", "catalog", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
colored = "2.1"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1.0"
regex = "1.10"
quick-xml = { version = "0.36", features = ["serialize"] }
