[package]
name = "gvc"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Kingsword kingsword09 <kingsword09@gmail.com>"]
description = "CLI manager for Gradle version catalogs—check, list, update, and add dependencies with automatic version aliases"
license = "Apache-2.0"
repository = "https://github.com/kingsword09/gvc"
homepage = "https://github.com/kingsword09/gvc"
documentation = "https://github.com/kingsword09/gvc/blob/main/README.md"
readme = "README.md"
keywords = ["gradle", "dependency", "version", "catalog", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
toml = "0.9.8"
toml_edit = "0.23.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.17"
jiff = "0.2.15"
colored = "3.0.0"
indicatif = "0.18.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1.0"
regex = "1.12.2"
quick-xml = { version = "0.38.3", features = ["serialize"] }
